Fixed particlejs not showing issues by linking the particle.js file properly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,7 @@ header[role='banner'] ul li .logout {
 
 main[role='login'] {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 
@@ -290,8 +290,8 @@ a:hover, a:active, a:focus, a:link, a:visited {
   height: 30px;
 }
 #particles-js {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 99%;
   position: absolute;
 }
 main[role='dashboard'] {
@@ -305,7 +305,7 @@ main[role='dashboard'] {
 main[role='dashboard'] .container {
   width: 1200px;
   height: 900px;
-  top: 180px;
+  top: 190px;
   padding: 1em 2em;
   line-height: 1.6;
   color: #333;
@@ -325,7 +325,7 @@ main[role='dashboard'] .verification-container {
 
 main[role='dashboard'] .verification-container form {
   width: 100%;
-  margin: 20px auto;
+  margin-top: 20px;
   height: 45px;
   padding: 0;
   display: flex;
